fix covers width

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,5 +1,5 @@
 .covers {
-  max-width: 375px;
+  width: 375px;
   height: 572px;
   padding: 32px 0;
   margin-left: auto;
